@@ -1,3 +1,9 @@
+drkns 27.04.2017 20:58:46 +0000 - build 4944
+
+1. Убираем пробелы при обработке pushd.
+
+2. Более корректно убираем кавычки при обработке set.
+
 zg 25.04.2017 12:59:57 +0200 - build 4943
 
 1. исключение при вызове mf.fsplit('a.:',0x4+0x8)
